--- a/test/leabra_startup.css
+++ b/test/leabra_startup.css
@@ -1,31 +1,29 @@
-// startup and run a project in the background, use like this:
+// startup and run a project in the background (nogui run or batch run), use like this:
 
-// [nice +10] pdp++ -nogui -p <myproj> -f leabra_startup.css [epochs=xxx batches=xxx...] &
+// [nice +10] pdp++ -nogui -p my_project.proj -f leabra_startup.css [args...] &
 
-// * nice +10 is optional but is nice to other users/processes.
+// * nice +10 is optional but is nice to other users/processes if not running on
+//   a dedicated compute server
 // * -nogui runs w/out the gui
-// * -f startup.css loads and runs this script
-// * <myproj> is the full name of your project file 
-// * [epochs=...] are other optional arguments as defined in the script to control
-//	programs 
+// * -p my_project.proj is the name of the project to load
+// * -f leabra_startup.css loads and runs this script
+// * [args...] are other optional arguments as defined in the script, including:
+// ** epochs=xxx   number of epochs to run
+// ** batches=xxx  number of training batches to run
+// ** tag=xxx      additional text to append to log and network file names
+// ** logdir=xxx   subdirectory from current directory to put log files in
 // * & at the end puts the job in the background.
 
-void SetArg(String arg_nm, String var_nm, Program* prog) {
-  String arg_str = taMisc::FindArgByName(arg_nm);
-  if(!arg_str.empty()) {
-    if(!prog->SetVar(var_nm, arg_str))
-      taMisc::Error("SetArg Error: variable:",var_nm,"not found in program:", prog->name);
-    else {
-      if(taMisc::dmem_proc == 0)
-	cerr << "Set " << var_nm << " in " << prog->name << " to: " << arg_str << endl;
-    }
-  }
-}
-
 void SetLogFile(String ext, String tag, String subdir, DataTable* dt, bool dmem=false) {
-  if(!dmem && (taMisc::dmem_proc != 0)) return;	// if not sep log files by dmem, then only for first guy!
+  // if not sep log files by dmem, then only for first guy!
+  if(!dmem && (taMisc::dmem_proc != 0)) return;
+  // this function does all the work: gets file name from project
+  // and appends our specific stuff to it
   String log_nm = dt->GetFileNameFmProject(ext, tag, subdir, dmem);
-  dt->SaveDataLog(log_nm, false, !dmem); // last arg is whether to restrict to dmem proc 0..
+  // tell the datatable object to save to this file name -- 
+  //   last arg is whether to restrict to dmem proc 0..
+  dt->SaveDataLog(log_nm, false, !dmem); 
+  // give the user some info:
   if(taMisc::dmem_proc == 0)
     cerr << "Saving data log of: " << dt->name << " to: " << log_nm << endl;
 }
@@ -42,7 +40,8 @@ void Startup() {
   taMisc::AddArgName("batches=", "BatchMax");
   taMisc::UpdateArgs();
 
-  cerr << "Loaded project: " << .projects[0].file_name << endl;
+  if(taMisc::dmem_proc == 0)
+    cerr << "Loaded project: " << .projects[0].file_name << endl;
 
   Program* train = .programs.LeabraTrain;
   if(!train) {
@@ -57,16 +56,18 @@ void Startup() {
 
   if(taMisc::dmem_proc == 0)
     cerr << "Initializing: " << batch->name << endl;
-  batch.Init();			// init first: required before vars are avail
+  batch.Init();			// init first -- could have errors!
 
   String tag = taMisc::FindArgByName("FileTag");
   String logdir = taMisc::FindArgByName("LogDir");
 
-  SetArg("EpochMax", "max_epoch", train);
-  SetArg("BatchMax", "max_batch", batch);
+  train.SetVarFmArg("EpochMax", "max_epoch");
+  batch.SetVarFmArg("BatchMax", "max_batch");
 
-  SetLogFile(".epc.dat", tag, logdir, .data.EpochOutputData, false);  // change to true for debugging dmem
-  SetLogFile(".trl.dat", tag, logdir, .data.TrialOutputData, true); // this should be dmem
+  // change last arg to true for debugging dmem..
+  SetLogFile(".epc.dat", tag, logdir, .data.EpochOutputData, false);
+  // trial-level data should always be dmem
+  SetLogFile(".trl.dat", tag, logdir, .data.TrialOutputData, true);
 
   Program* saveweights = .programs.SaveWeights;
   if(saveweights) {           // propagate the tag..
