--- a/src/temt/taiqtso/passworddialog.ui
+++ b/src/temt/taiqtso/passworddialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>399</width>
+    <width>412</width>
     <height>171</height>
    </rect>
   </property>
@@ -75,7 +75,7 @@
    <item row="3" column="1">
     <widget class="QCheckBox" name="saveFlag">
      <property name="text">
-      <string>Save for autofill</string>
+      <string>Save for auto-fill (WARNING: very low security)</string>
      </property>
      <property name="checked">
       <bool>true</bool>
