edit panel fix: figured out icon compiling resource thing.

--- a/src/temt/ta/ta.qrc
+++ b/src/temt/ta/ta.qrc
@@ -5,6 +5,7 @@
   <file>images/editpaste.png</file>
   <file>images/editredo.png</file>
   <file>images/editundo.png</file>
+  <file>images/editedit.png</file>
   <file>images/exportpdf.png</file>
   <file>images/filenew.png</file>
   <file>images/fileopen.png</file>
